--- a/room.html
+++ b/room.html
@@ -85,7 +85,9 @@
                                 <a href="service.html" class="nav-item nav-link">Dịch vụ</a>
                                 <a href="room.html" class="nav-item nav-link">Đặt vé</a>
                                 <a href="contact.html" class="nav-item nav-link active">Liên Hệ</a>
-                            
+                            </div>
+                        
+                        </div>
                     </nav>
                 </div>
             </div>
