--- a/room.html
+++ b/room.html
@@ -74,7 +74,7 @@
                     </div>
                     <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
                         <a href="index.html" class="navbar-brand d-block d-lg-none">
-                            <h1 class="m-0 text-primary text-uppercase">Hotelier</h1>
+                            <h1 class="m-0 text-primary text-uppercase">FOxie</h1>
                         </a>
                         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
                             <div class="navbar-nav mr-auto py-0">
                                 <a href="index.html" class="nav-item nav-link">Trang chủ</a>
                                 <a href="service.html" class="nav-item nav-link">Dịch vụ</a>
-                                <a href="room.html" class="nav-item nav-link">Đặt vé</a>
+                                <a href="booking.html" class="nav-item nav-link">Đặt vé</a>
                                 <a href="contact.html" class="nav-item nav-link active">Liên Hệ</a>
                             </div>
                         
@@ -161,18 +161,18 @@
                                 </div>
                                 <div class="col-md-2">
                                     <select class="form-select">
-                                        <option selected>Adult</option>
-                                        <option value="1">Adult 1</option>
-                                        <option value="2">Adult 2</option>
-                                        <option value="3">Adult 3</option>
+                                        <option selected>Người lớn</option>
+                                        <option value="1">1 người</option>
+                                        <option value="2">2 người</option>
+                                        <option value="3">3 người</option>
                                     </select>
                                 </div>
                                 <div class="col-md-2">
                                     <select class="form-select">
-                                        <option selected>Child</option>
-                                        <option value="1">Child 1</option>
-                                        <option value="2">Child 2</option>
-                                        <option value="3">Child 3</option>
+                                        <option selected>Trẻ em</option>
+                                        <option value="1">1 người</option>
+                                        <option value="2">2 người</option>
+                                        <option value="3">3 người</option>
                                     </select>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase">Our Rooms</h6>
+                    <h6 class="section-title text-center text-primary text-uppercase">Các loại vé</h6>
                     <h1 class="mb-5">Explore Our <span class="text-primary text-uppercase">Rooms</span></h1>
                 </div>
                 <div class="row g-4">
