--- a/booking.html
+++ b/booking.html
@@ -87,6 +87,7 @@
                                 <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
                                 <div class="nav-item dropdown">
                             </div>
+                            <a href="booking.html" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Tiến hành đặt vé<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
                             
                         </div>
