--- a/room.html
+++ b/room.html
@@ -74,19 +74,28 @@
                     </div>
                     <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
                         <a href="index.html" class="navbar-brand d-block d-lg-none">
-                            <h1 class="m-0 text-primary text-uppercase">FOxie</h1>
+                            <h1 class="m-0 text-primary text-uppercase">Hotelier</h1>
                         </a>
                         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto py-0">
-                                <a href="index.html" class="nav-item nav-link">Trang chủ</a>
-                                <a href="service.html" class="nav-item nav-link">Dịch vụ</a>
-                                <a href="booking.html" class="nav-item nav-link">Đặt vé</a>
-                                <a href="contact.html" class="nav-item nav-link active">Liên Hệ</a>
+                                <a href="index.html" class="nav-item nav-link">Home</a>
+                                <a href="about.html" class="nav-item nav-link">About</a>
+                                <a href="service.html" class="nav-item nav-link">Services</a>
+                                <a href="room.html" class="nav-item nav-link active">Rooms</a>
+                                <div class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                                    <div class="dropdown-menu rounded-0 m-0">
+                                        <a href="booking.html" class="dropdown-item">Booking</a>
+                                        <a href="team.html" class="dropdown-item">Our Team</a>
+                                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                    </div>
+                                </div>
+                                <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
-                        
+                            <a href="https://htmlcodex.com/hotel-html-template-pro" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Premium Version<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
                     </nav>
                 </div>
@@ -99,12 +108,12 @@
         <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
             <div class="container-fluid page-header-inner py-5">
                 <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Đặt Vé</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Rooms</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="index.html">Trang Chủ</a></li>
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Đặt Vé</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Rooms</li>
                         </ol>
                     </nav>
                 </div>
@@ -120,59 +129,31 @@
                     <div class="row g-2">
                         <div class="col-md-10">
                             <div class="row g-2">
-                                <div class="col-md-2">
+                                <div class="col-md-3">
                                     <div class="date" id="date1" data-target-input="nearest">
                                         <input type="text" class="form-control datetimepicker-input"
                                             placeholder="Check in" data-target="#date1" data-toggle="datetimepicker" />
                                     </div>
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-3">
                                     <div class="date" id="date2" data-target-input="nearest">
                                         <input type="text" class="form-control datetimepicker-input" placeholder="Check out" data-target="#date2" data-toggle="datetimepicker"/>
                                     </div>
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-3">
                                     <select class="form-select">
-                                        <option selected>Điểm Đi</option>
-                                        <option value="1">TP Hồ Chí Minh</option>
-                                        <option value="2">Hà Nội</option>
-                                        <option value="3">Đà Nẵng</option>
-                                        <option value="4">Quảng Ninh</option>
-                                        <option value="5">Hải Phòng</option>
-                                        <option value="6">Nghệ An</option>
-                                        <option value="7">Huế</option>
-                                        <option value="8">Khánh Hòa</option>
-                                        <option value="9">Lâm Đồng</option>
+                                        <option selected>Adult</option>
+                                        <option value="1">Adult 1</option>
+                                        <option value="2">Adult 2</option>
+                                        <option value="3">Adult 3</option>
                                     </select>
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-3">
                                     <select class="form-select">
-                                        <option selected>Điểm Đến</option>
-                                        <option value="1">TP Hồ Chí Minh</option>
-                                        <option value="2">Hà Nội</option>
-                                        <option value="3">Đà Nẵng</option>
-                                        <option value="4">Quảng Ninh</option>
-                                        <option value="5">Hải Phòng</option>
-                                        <option value="6">Nghệ An</option>
-                                        <option value="7">Huế</option>
-                                        <option value="8">Khánh Hòa</option>
-                                        <option value="9">Lâm Đồng</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-2">
-                                    <select class="form-select">
-                                        <option selected>Người lớn</option>
-                                        <option value="1">1 người</option>
-                                        <option value="2">2 người</option>
-                                        <option value="3">3 người</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-2">
-                                    <select class="form-select">
-                                        <option selected>Trẻ em</option>
-                                        <option value="1">1 người</option>
-                                        <option value="2">2 người</option>
-                                        <option value="3">3 người</option>
+                                        <option selected>Child</option>
+                                        <option value="1">Child 1</option>
+                                        <option value="2">Child 2</option>
+                                        <option value="3">Child 3</option>
                                     </select>
                                 </div>
                             </div>
@@ -191,7 +172,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase">Các loại vé</h6>
+                    <h6 class="section-title text-center text-primary text-uppercase">Our Rooms</h6>
                     <h1 class="mb-5">Explore Our <span class="text-primary text-uppercase">Rooms</span></h1>
                 </div>
                 <div class="row g-4">
