--- a/contact.html
+++ b/contact.html
@@ -96,10 +96,10 @@
 
 
         <!-- Page Header Start -->
-        <div class="container-fluid page-header mb-5 pt-8 p-0" style="background-image: url(./img/plane.jpg);">
-            <div class="container-fluid page-header-inner py-5 ">
+        <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
+            <div class="container-fluid page-header-inner py-5">
                 <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">- Contact -</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Contact</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -187,10 +187,10 @@
                 <div class="col-lg-10 border rounded p-1">
                     <div class="border rounded text-center p-1">
                         <div class="bg-white rounded text-center p-5">
-                            <h4 class="mb-4">Theo dõi <span class="text-primary text-uppercase">Chuyến bay của bạn</span></h4>
+                            <h4 class="mb-4">Theo dõi <span class="text-primary text-uppercase">Chuyến bay của chúng tôi</span></h4>
                             <div class="position-relative mx-auto" style="max-width: 400px;">
                                 <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
-                                <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">FOLLOW</button>
+                                <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Submit</button>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                     <div class="col-lg-5 col-md-12">
                         <div class="row gy-5 g-4">
                             <div class="col-md-6">
-                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Đặ vé</h6>
+                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Đặt vé</h6>
                                 <a class="btn btn-link" href="">Khuyến mãi</a>
                                 <a class="btn btn-link" href="">Ghế</a>
                                 <a class="btn btn-link" href="">Chính sách</a>
